fixed styling and spacing

--- a/src/scss/landing_page/ads.scss
+++ b/src/scss/landing_page/ads.scss
@@ -3,7 +3,7 @@
 
 .ad-image {
   width: 100%;
-  height: 300px;
+  height: 400px;
   object-fit: cover;
   object-position: 0% 0%;
 }
